# Lab2LLM

./: .gitignore  README.md  main.py  practice_2.ipynb  pyproject.toml
src/agents/: explanation_agent.py  problem_solving_agent.py  router_agent.py
src/config/: settings.py
src/graph/: state.py  workflow.py
src/memory/: session_memory.py
src/tools/: calculator_tool.py  knowledge_tool.py
src/utils/: prompts.py
